# boilerplate_2023

./: .gitignore  Dockerfile.venv  README.md  jupyter_spark.bat  pyproject.toml  tox.ini
docker/: docker-compose.yml
docs/source/: conf.py  documentation.rst  env_setup.rst  folder_tree_structure.rst  index.rst
src/: __init__.py
src/boilerplate/: __init__.py  __main__.py
src/boilerplate/code_examples/: database_example.py  spark_example.py
src/boilerplate/config/: .local.template.yaml  __init__.py  _xconfig.py  config.py
src/boilerplate/put_code_here/: code_example.py  test.py
src/boilerplate/utils/: logging.py  spark.py
src/core/: __main__.py
src/core/code_examples/: database_example.py  spark_example.py
src/core/config/: .local.template.yaml  config.py
src/core/config/templates/: .template.blob_storage.yaml  .template.sql.yaml
src/core/utils/: logging.py  spark.py
src/notebooks/: spark_example.ipynb
test/test_boilerplate/: __init__.py
